website/websites/u64q/code/knucleotide.2.jruby.log

Fri, 21 Nov 2014 00:33:13 GMT

MAKE:
mv knucleotide.jruby-2.jruby knucleotide.rb
0.02s to complete and log all make actions

COMMAND LINE:
/usr/local/src/jruby-1.7.16.1/bin/jruby -Xcompile.invokedynamic=true -J-server -J-Xmn512m -J-Xms2048m -J-Xmx2048m knucleotide.rb 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

SyntaxError: knucleotide.rb:37: syntax error, unexpected kWHILE
while (line !~ /^>/) & line do
     ^
